--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>This is my cool website, but as you can see, it's kind of under construction.
+    Come back soon for less construction and more website.
+    Thanks! Bye!
+</p>
 </body>
 </html>
