--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>Come back soon for an actual cool website rather than this boring thing.
+    Thanks bye!
+</p>
 </body>
 </html>
